--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciamento de veiculos</title>
+    <link rel="stylesheet" href="formulario.css">
 </head>
 <body>
     <header>
